[package]
name = "testGameBevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_common_assets = "0.7.0"
bevy_egui = "0.22.0"
bevy_prototype_lyon = "0.9.0"
bevy_rapier2d = "0.22.0"
lyon = "1.0.1"
rand = "0.8.5"
svg = "0.14.0"
tracing = "0.1.40"
usvg = "0.36.0"
wasm-bindgen = "0.2.87"
lyon_tessellation = "1.0.10"
